# soroban-cli-futurenet

./: Cargo.toml  README.md
src/: lib.rs  test.rs
